# indra_db

./: .gitignore  CHANGELOG.md  CLI_EMBEDDINGS.md  Cargo.toml  DAY_IN_THE_LIFE.md  EMBEDDINGS.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
examples/: embeddings.rs
src/: database.rs  error.rs  lib.rs  main.rs
src/embedding/: api.rs  hf.rs  mock.rs  mod.rs  traits.rs
src/graph/: mod.rs  traversal.rs
src/model/: commit.rs  edge.rs  hash.rs  mod.rs  thought.rs
src/ops/: branch.rs  diff.rs  mod.rs
src/remote/: credentials.rs  mod.rs  sync.rs
src/search/: mod.rs  vector.rs
src/store/: blob.rs  file_store.rs  mod.rs
src/trie/: mod.rs  node.rs  tree.rs
src/viz/: mod.rs  pca.rs
tests/: README.md  cli_integration.rs  hf_embedder_integration.rs
