[package]
name = "indra_db"
version = "0.1.0"
edition = "2021"
description = "A content-addressed graph database for versioned thoughts"
license = "MIT"
repository = "https://github.com/moonstripe/indra_db"
homepage = "https://github.com/moonstripe/indra_db"
documentation = "https://docs.rs/indra_db"
readme = "README.md"
keywords = ["database", "graph", "versioning", "knowledge-graph", "embeddings"]
categories = ["database", "data-structures", "command-line-utilities"]
authors = ["moonstripe <moonstripe@protonmail.com>"]

[lib]
name = "indra_db"
path = "src/lib.rs"

[[bin]]
name = "indra"
path = "src/main.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Hashing
blake3 = "1.5"
hex = "0.4"

# Storage
memmap2 = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Compression
zstd = "0.13"

# Utilities
parking_lot = "0.12"
bytes = "1.5"

# CLI
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3.10"
criterion = "0.5"

[profile.release]
lto = true
codegen-units = 1
