[package]
name = "indra_db"
version = "0.1.6"
edition = "2021"
description = "A content-addressed graph database for versioned thoughts"
license = "MIT"
repository = "https://github.com/moonstripe/indra_db"
homepage = "https://github.com/moonstripe/indra_db"
documentation = "https://docs.rs/indra_db"
readme = "README.md"
keywords = ["database", "graph", "versioning", "knowledge-graph", "embeddings"]
categories = ["database", "data-structures", "command-line-utilities"]
authors = ["moonstripe <moonstripe@protonmail.com>"]

[lib]
name = "indra_db"
path = "src/lib.rs"

[[bin]]
name = "indra"
path = "src/main.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Hashing
blake3 = "1.5"
hex = "0.4"

# Storage
memmap2 = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Compression
zstd = "0.13"

# Utilities
parking_lot = "0.12"
bytes = "1.5"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Embeddings (optional features)
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
hf-hub = { version = "0.4", optional = true, features = ["tokio"] }
tokenizers = { version = "0.21", optional = true }
tokio = { version = "1.42", optional = true, features = ["full"] }
reqwest = { version = "0.12", optional = true, features = ["json", "blocking"] }

# Directories for config storage
dirs = "5.0"

# Open browser for login
open = "5.0"

[dev-dependencies]
tempfile = "3.10"
criterion = "0.5"

[profile.release]
lto = true
codegen-units = 1

[features]
default = ["hf-embeddings", "sync"]
hf-embeddings = ["candle-core", "candle-nn", "candle-transformers", "hf-hub", "tokenizers", "tokio"]
api-embeddings = ["reqwest", "tokio"]
sync = ["reqwest", "tokio"]
# For testing without heavy deps
mock-embeddings = []
